fix alignment in form

--- a/static/main.css
+++ b/static/main.css
@@ -65,7 +65,6 @@ body {
   flex-direction: column;
   align-items: stretch;
   justify-content: center;
-  padding: 1em;
 }
 
 .flexchild {
